--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <packaging>war</packaging>
 
     <name>resume-base</name>
-    <url>http://maven.apache.org</url>
+    <url>https://maven.apache.org</url>
     <description>CV database project for experimenting with different development tools.</description>
 
     <properties>
